js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A4_T1.js
assert
(
Error
.
hasOwnProperty
(
'
prototype
'
)
'
Error
.
hasOwnProperty
(
\
'
prototype
\
'
)
must
return
true
'
)
;
reportCompare
(
0
0
)
;
